--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
 
   <p>Ми не збираємо персональні дані без вашої згоди.</p>
 
-  <p>Якщо у вас є запитання, зв’яжіться з нами: <a href="mailto:ig.beloded@gmail.com">ig.beloded@gmail.com</a></p>
+  <h2>Видалення даних користувача (User Data Deletion)</h2>
+  <p>Якщо ви бажаєте видалити свій акаунт та всі пов’язані з ним дані із додатка <strong>FinesPlus</strong>, ви можете надіслати запит на видалення.</p>
+
+  <p><strong>Спосіб 1:</strong> якщо ви використовували Facebook для входу, ви можете видалити додаток безпосередньо у налаштуваннях свого акаунта Facebook:<br>
+  <em>Налаштування → Додатки та вебсайти → FinesPlus → Видалити.</em></p>
+
+  <p><strong>Спосіб 2:</strong> ви можете надіслати запит вручну на електронну адресу:<br>
+  📧 <a href="mailto:support@finesplus.app">support@finesplus.app</a></p>
+
+  <p>У листі, будь ласка, вкажіть:</p>
+  <ul>
+    <li>Адресу електронної пошти або ID, використаний у додатку</li>
+    <li>Фразу <strong>“Request for Data Deletion”</strong> у темі листа</li>
+  </ul>
+
+  <p>Після отримання вашого запиту всі дані буде видалено з наших серверів протягом <strong>30 днів</strong>.</p>
+
+  <h2>Контактна інформація</h2>
+  <p>Якщо у вас є запитання, зв’яжіться з нами: 
+    <a href="mailto:ig.beloded@gmail.com">ig.beloded@gmail.com</a>
+  </p>
 </body>
 </html>
+
