--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Політика конфіденційності</h1>
   <p><strong>Останнє оновлення:</strong> 22 жовтня 2025 року</p>
   <p><strong>Додаток:</strong> FinesPlus</p>
-  <p><strong>Розробник:</strong> Igor Beloded</p>
+  <p><strong>Розробник:</strong> Michael Beloded</p>
 
   <p>Додаток <em>FinesPlus</em> поважає вашу конфіденційність. Ми не збираємо, не зберігаємо і не передаємо особисті дані користувачів третім особам.</p>
 
